cmake_minimum_required (VERSION 3.1)
project (fisica1)

if (EXISTS "$ENV{WORKSPACE}/sysconfig/cmake/physycom_config.cmake")
   message(STATUS "Enabling physycom settings")
   include("$ENV{WORKSPACE}/sysconfig/cmake/physycom_config.cmake")
else()
   message(STATUS "Unable to find physycom settings file")
endif()

if(APPLE)
  set(KML_ROOT_DIR /usr/local/Cellar/libkml/1.2.0/)
endif()

find_package(KML REQUIRED)
set(RAPIDXML_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/src/rapidxml/src)
include_directories(${KML_INCLUDE_DIRS} ${RAPIDXML_INCLUDE_DIR})
find_package(LibXml2 REQUIRED)
if(MSVC)
  find_package(UriParser REQUIRED)
  find_package(MiniZip REQUIRED)
  find_package(ZLIB REQUIRED)
  find_package(BZip2 REQUIRED)
  list(APPEND ADDITIONAL_LIBRARIES ${URIPARSER_LIBRARY} ${ZLIB_LIBRARY} ${MINIZIP_LIBRARY} ${BZIP2_LIBRARY})
endif()
add_definitions("${LIBXML2_DEFINITIONS}")
include_directories(${KML_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
message(STATUS "Include dirs: ${KML_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR}")

add_executable(ace ${CMAKE_SOURCE_DIR}/src/read_kml.cpp)
target_link_libraries(ace ${KML_LIBRARIES} ${LIBXML2_LIBRARIES} ${ADDITIONAL_LIBRARIES})
